<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Menu"
    android:backgroundTint="@color/background">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/back"
        android:textColor="#BB86FC"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="300dp"
        android:layout_height="469dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.611">

        <TableRow
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/unselected_item"
                android:paddingTop="2dp"
                android:text="@string/row_1"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                />
        </TableRow>

        <TableRow
            android:id="@+id/see_instructions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">


            <TextView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/unselected_item"
                android:paddingTop="2dp"
                android:text="@string/row_2"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/see_instructions"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/pause_session"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/unselected_item"
                android:paddingTop="2dp"
                android:text="@string/row_3"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/pause_session"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/transfer_session"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/unselected_item"
                android:paddingTop="2dp"
                android:text="@string/row_4"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/transfer_session"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">


            <TextView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/unselected_item"
                android:paddingTop="2dp"
                android:text="@string/row_5"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/summary"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/log_out"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/unselected_item"
                android:paddingTop="2dp"
                android:text="@string/row_6"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp"
                android:text="@string/log_out"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />
        </TableRow>


    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>